k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: client-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      components: yolo-app

  template:
    metadata:
      labels:
        components: yolo-app

    spec:
      containers:
        - name: react-ui
          image: mariamsenzia/client:v1.0.0
          ports:
            - containerPort: 3000
