k8s/mongo-deployment.yml
apiVersion : apps/v1
kind: Deployment

metadata:
  name: mongo-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      components: mongodb

  template:
    metadata:
      labels:
        components: mongodb

    spec:
      volumes: 
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-persistent-volume-claim

      containers:
        - name: mongo-db
          image: mongo
          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongo-storage 
              mountPath: /data/db
              subPath: mongo
