k8s/backend-service.yml
apiVersion: v1

kind: Service

metadata:
  name: backend-service

spec:
  selector:
    components: server

  type: ClusterIP

  ports:
    - port: 5000
      targetPort: 5000
