k8s/client-service.yml
apiVersion: v1

kind: Service

metadata:
  name: client-service

spec:
  selector:
    components: yolo-app

  type: ClusterIP

  ports:
    - port: 3000
      targetPort: 3000
