k8s/mongo-service.yml
apiVersion: v1

kind: Service

metadata:
  name: mongo-sevice

spec:
  selector:
    components: mongodb

  type: ClusterIP

  ports:
    - port: 27017
      targetPort: 27017
